Refactored ValueOops test